# demo_ai

./: README.md
backend/crewai/artificial/: README.md  pyproject.toml
backend/crewai/artificial/src/artificial/: crew.py  main.py
