[project]
name = "artificial"
version = "0.1.0"
description = "artificial using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.1"
]

[project.scripts]
artificial = "artificial.main:run"
run_crew = "artificial.main:run"
train = "artificial.main:train"
replay = "artificial.main:replay"
test = "artificial.main:test"
run_with_trigger = "artificial.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
